# werkenincontext

./: .env.document-workflow.example  .env.example  .env.supabase.example  .gitignore  CLAUDE.md  CODEBASE_STRUCTURE.md  Cargo.toml  Dockerfile  QUICKSTART.md  README.md  TODOS.md  docker-compose.camunda.yml  docker-compose.document-workflow.yml  docker-compose.nl-wallet-verification.yml  docker-compose.supabase.yml  docker-compose.yml  panel\|dashboard\|Duurzaamheid\|Flevoland
context-aware/: Cargo.toml
context-aware/crates/context-api/: Cargo.toml
context-aware/crates/context-api/src/: handlers.rs  lib.rs  middleware.rs  routes.rs
context-aware/crates/context-core/: Cargo.toml
context-aware/crates/context-core/src/: bridge.rs  entities.rs  inference.rs  layers.rs  lib.rs  quality.rs  store.rs
context-aware/crates/context-inference/: Cargo.toml
context-aware/crates/context-inference/src/: legal.rs  lib.rs  nebul.rs  ner.rs  review.rs
context-aware/crates/context-store/: Cargo.toml
context-aware/crates/context-store/src/: connection.rs  lib.rs  migrations.rs  repositories.rs
crates/iou-ai/: Cargo.toml
crates/iou-ai-service/: Cargo.toml  Dockerfile
crates/iou-ai/src/: compliance.rs  conversion.rs  document_entity.rs  graphrag.rs  lib.rs  llm.rs  semantic.rs  suggestions.rs  templates.rs
crates/iou-ai/src/agents/: compliance.rs  content.rs  error.rs  mod.rs  pipeline.rs  research.rs  review.rs
crates/iou-ai/src/stakeholder/: RIJKSOVERHEID_API.md  baseline.rs  deduplicator.rs  fallback_dict.rs  main_extractor.rs  mention.rs  mod.rs  normalization.rs  normalizer.rs  result.rs  rijksoverheid_api_probe.rs  types.rs
crates/iou-ai/tests/: stakeholder_integration.rs
crates/iou-api/: Cargo.toml
crates/iou-api/src/: config.rs  db.rs  document_workflow.rs  dual_write.rs  error.rs  lib.rs  main.rs  search_types.rs  supabase.rs
crates/iou-api/src/auth/: mod.rs  supabase_jwt.rs
crates/iou-api/src/camunda/: gateway.rs
crates/iou-api/src/etl/: mod.rs  outbox.rs
crates/iou-api/src/id/: nl_wallet.rs
crates/iou-api/src/middleware/: auth.rs  mod.rs  vc.rs
crates/iou-api/src/migration/: mod.rs  user_migration.rs
crates/iou-api/src/monitoring/: collector.rs  mod.rs
crates/iou-api/src/orchestrator/: mod.rs  types.rs  wrapper.rs
crates/iou-api/src/realtime/: mod.rs  supabase_rt.rs
crates/iou-api/src/routes/: auth.rs  buildings_3d.rs  camunda_internal.rs  context.rs  documents.rs  health.rs  mod.rs  objects.rs  search.rs  stakeholder.rs  templates.rs  terrain.rs
crates/iou-api/src/vc/: mapper.rs  mod.rs  verifier.rs
crates/iou-api/src/websockets/: documents.rs  limiter.rs  types.rs
crates/iou-api/src/workflows/: mod.rs
crates/iou-api/tests/: common.rs  dual_write.rs  schema_equivalence.rs  stabilization_etl.rs
crates/iou-api/tests/cleanup/: documentation.rs  duckdb_analytics_only.rs  final_integration.rs  websocket_removal.rs
crates/iou-api/tests/concurrency/: concurrent_operations.rs  mod.rs
crates/iou-api/tests/helpers/: mod.rs
crates/iou-api/tests/integration/: auth_tests.rs  document_flow.rs  mod.rs  storage_tests.rs
crates/iou-api/tests/migration/: auth_realtime.rs  cutover.rs
crates/iou-api/tests/migration_tests/: mod.rs  realtime_validation.rs
crates/iou-api/tests/mocks/: mod.rs  s3.rs
crates/iou-api/tests/performance/: mod.rs  streaming_memory.rs
crates/iou-camunda-worker/: Cargo.toml
crates/iou-camunda-worker/src/: main.rs
crates/iou-core/: Cargo.toml
crates/iou-core/src/: api_types.rs  category.rs  compliance.rs  document.rs  domain.rs  graphrag.rs  lib.rs  objects.rs  organization.rs  setting.rs  tag.rs  workflows.rs
crates/iou-core/src/ai/: mod.rs  ollama.rs
crates/iou-core/src/audit/: logger.rs  mod.rs  models.rs
crates/iou-core/src/category/: repository.rs
crates/iou-core/src/config/: mod.rs  watcher.rs  workflow.rs
crates/iou-core/src/delegation/: mod.rs  resolver.rs  service.rs  types.rs
crates/iou-core/src/diff/: generator.rs  mod.rs
crates/iou-core/src/escalation/: mod.rs  service.rs
crates/iou-core/src/graphrag/: connection.rs  error.rs  migration.rs  mod.rs  queries.rs  store.rs  types.rs
crates/iou-core/src/purpose/: approval.rs  categories.rs  mod.rs  registry.rs  validation.rs
crates/iou-core/src/realtime/: mod.rs
crates/iou-core/src/registry/: api.rs  entity.rs  mod.rs  quality.rs  quality_engine.rs  search.rs  service.rs  source.rs  source_reader.rs
crates/iou-core/src/setting/: repository.rs
crates/iou-core/src/sla/: calculator.rs  mod.rs
crates/iou-core/src/ssi/: did.rs  mod.rs  presentation.rs  resolver.rs  verifiable_credential.rs
crates/iou-core/src/storage/: mod.rs  s3.rs
crates/iou-core/src/tag/: README.md  repository.rs
crates/iou-core/src/tenancy/: mod.rs  tenant.rs
crates/iou-core/src/versions/: mod.rs  service.rs
crates/iou-core/src/workflows/: mod.rs  multi_stage.rs
crates/iou-core/tests/: mod.rs
crates/iou-core/tests/category/: mod.rs
crates/iou-core/tests/config/: mod.rs  workflow_config.rs
crates/iou-core/tests/delegation/: mod.rs  resolution.rs  service.rs
crates/iou-core/tests/diff/: generator.rs
crates/iou-core/tests/escalation/: service.rs
crates/iou-frontend/: Cargo.toml  Dioxus.toml  index.html  style.css
crates/iou-frontend/assets/: style.css
crates/iou-frontend/src/: lib.rs  main.rs
crates/iou-orchestrator/: Cargo.toml
crates/iou-orchestrator/src/: context.rs  error.rs  lib.rs  version.rs
crates/iou-regels/: Cargo.toml
crates/iou-regels/src/: architektur.rs  bpmn.rs  client.rs  compliance.rs  dmn.rs  lib.rs  model.rs  provisa.rs  tools.rs
crates/iou-storage/: Cargo.toml
crates/iou-storage/src/: config.rs  lib.rs  metadata.rs  s3.rs
crates/shared/: Cargo.toml
frontend/: Cargo.toml
frontend/crates/iou-frontend/: Cargo.toml
server/: Cargo.toml
server/crates/iou-ai/: Cargo.toml
server/crates/iou-api/: Cargo.toml
server/crates/iou-camunda-worker/: Cargo.toml  Dockerfile
server/crates/iou-orchestrator/: Cargo.toml
server/crates/iou-storage/: Cargo.toml
server/crates/workflow-builder/: Cargo.toml
(+931 files in other folders)
