[package]
name = "iou-ai"
version.workspace = true
edition = "2024"
description = "AI/ML services for IOU-Modern: NER, GraphRAG, embeddings"

[dependencies]
# Internal
iou-core.workspace = true

# Graph algorithms
petgraph = "0.6"

# Serialization
serde.workspace = true
serde_json.workspace = true

# Types
uuid.workspace = true
chrono.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

# Template engine
tera = "1.20"
slug = "0.1"

# Async runtime
tokio = { workspace = true, features = ["test-util"] }

# Text processing (simpler alternative to rust-bert for now)
# rust-bert requires libtorch which is heavy
# We'll use regex-based NER for Dutch government entities
regex = "1.10"
lazy_static = "1.5"

# For embeddings - can use external API or ONNX later
# ort = { version = "2.0", features = ["load-dynamic"] }  # ONNX Runtime

[dev-dependencies]
