[package]
name = "iou-api"
version.workspace = true
edition = "2024"
description = "REST API server for IOU-Modern using Axum and DuckDB"

[lib]
name = "iou_api"
path = "src/lib.rs"

[[bin]]
name = "iou-api"
path = "src/main.rs"

[dependencies]
# Internal crates
iou-core.workspace = true
iou-ai = { path = "../iou-ai" }
iou-orchestrator = { path = "../iou-orchestrator" }

# Web framework
axum = { workspace = true, features = ["ws"] }
tower.workspace = true
tower-http.workspace = true

# Async runtime
tokio.workspace = true

# Database - DuckDB embedded
duckdb.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Types
uuid.workspace = true
chrono.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Authentication
jsonwebtoken = "9.3"

# Verifiable Credential support
base64 = "0.22"
md-5 = "0.10"

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Config
dotenvy = "0.15"

# HTTP client for external APIs
reqwest = { version = "0.12", features = ["json"] }
proj = "0.31.0"

# WebSocket support
tokio-tungstenite = "0.24"
futures-util = "0.3"
bytes = "1.9"

# Concurrent collections
dashmap = "6.1"

[dev-dependencies]
tokio-test = "0.4"
futures = "0.3"

