[package]
name = "iou-camunda-worker"
version.workspace = true
edition.workspace = true
description = "Zeebe job worker: Rust-pipeline en Deep Agent naar iou-api"

[[bin]]
name = "iou-camunda-worker"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
zeebe-rs = "0.4.1"
reqwest = { version = "0.12", features = ["json"] }
