[package]
name = "iou-frontend"
version.workspace = true
edition = "2021"
description = "Dioxus WebAssembly frontend for IOU-Modern"

[dependencies]
# Internal
iou-core.workspace = true
iou-regels.workspace = true

# Dioxus framework
dioxus = { version = "0.7", features = ["router"] }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Types
uuid = { version = "1.11", features = ["serde", "v4", "js"] }
chrono = { version = "0.4", features = ["serde", "wasmbind"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json"] }

# Error handling
thiserror.workspace = true

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
