[package]
name = "iou-orchestrator"
version.workspace = true
edition.workspace = true
description = "Workflow orchestration with human-in-the-loop for IOU-Modern"
authors.workspace = true
license.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["sync", "time", "rt"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Collections
indexmap = "2.5"

# Random for jitter
rand = "0.8"

[dev-dependencies]
# Concurrency testing
loom = "0.7"

# Testing utilities
tokio-test = "0.4"

