[package]
name = "iou-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
iou-core = { path = "../iou-core" }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }

# AWS SDK for S3 (works with MinIO and other S3-compatible storage)
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.65"
aws-smithy-types = "1.2"

[dev-dependencies]
tokio-test = "0.4"
