[package]
name = "context-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace crates
context-core = { path = "../context-core" }
context-store = { path = "../context-store" }
iou-core = { path = "../../../crates/iou-core", default-features = false, features = ["server"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Types
uuid = { workspace = true }
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Validation
garde = { workspace = true }

# Logging
tracing = { workspace = true }

# HTTP
http = { workspace = true }
