[package]
name = "iou-orchestrator"
version.workspace = true
edition.workspace = true
description = "Workflow orchestration with human-in-the-loop for IOU-Modern"
authors.workspace = true
license.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["sync", "time", "rt"] }

# Async traits
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true

# Collections
indexmap.workspace = true

# Random for jitter
rand.workspace = true

# Internal dependencies
iou-core.workspace = true

[dev-dependencies]
# Concurrency testing
loom.workspace = true

# Testing utilities
tokio-test.workspace = true
