[package]
name = "workflow-builder"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["core", "api", "ai", "sim"]

[workspace.dependencies]
# Workspace dependencies
workflow-builder-core = { path = "core" }
workflow-builder-api = { path = "api" }
workflow-builder-ai = { path = "ai" }
workflow-builder-sim = { path = "sim" }

# External dependencies
iou-core = { path = "../../../crates/iou-core" }
iou-ai = { path = "../iou-ai" }
uuid = { version = "1.0", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
duckdb = "0.10"
