[package]
name = "workflow-builder-core"
version = "0.1.0"
edition = "2021"

[dependencies]
iou-core = { path = "../../../../crates/iou-core" }
uuid = { version = "1.0", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
