[package]
name = "workflow-builder-sim"
version = "0.1.0"
edition = "2021"

[dependencies]
workflow-builder-core = { path = "../core" }
iou-core = { path = "../../../../crates/iou-core" }
uuid = { version = "1.0", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
petgraph = "0.6"
